# CameraServer

./: CMakeLists.txt  CMakeLists_win.txt  CameraServer.cpp
include/: CameraDevice.hpp  CameraFramedSource.hpp  CameraServerMediaSubsession.hpp  Logger.hpp
src/: CameraDevice.cpp  CameraFramedSource.cpp  CameraServerMediaSubsession.cpp
